--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <style media="screen">
       #message h1 { color: #ffa100; font-weight: bold; margin: 0 0 8px; }
-      #message h2 { font-weight: bold; color: rgba(0,0,0,0.7); margin: 0 0 16px;}
+      #message h2 { font-weight: bold; color: rgba(253, 253, 253, 0.7); margin: 0 0 16px;}
       #message p { line-height: 140%; margin: 16px 0 24px; font-size: 16px; }
       @media (max-width: 600px) {
         body, #message { margin-top: 0; background: white; box-shadow: none; }
